--- a/itcomp2024/index.html
+++ b/itcomp2024/index.html
@@ -44,7 +44,7 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="/">Home</a>
                     <a class="nav-link" href="itcomp2024">IT-Comp 2024</a>
-                    <a class="nav-link" href="itcompinternal">IT-Comp Internal 2024</a>
+                    <a class="nav-link" href="404">IT-Comp Internal 2024</a>
                 </div>
                 <!-- Left links -->
             </div>
