--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1647876126476398"
+     crossorigin="anonymous"></script>
     <!-- MDB -->
     <script
       type="text/javascript"
