--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
       gtag("config", "G-9TTERL4MZN");
     </script>
-    <title>Himatif Polindra</title>
+    <title>Bimz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
